Lab4/Code/syntax.output
State 25 conflicts: 1 shift/reduce
State 30 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | ε

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI

    8 ExtDecList: VarDec
    9           | VarDec COMMA ExtDecList

   10 Specifier: TYPE
   11          | StructSpecifier

   12 StructSpecifier: STRUCT OptTag LC DefList RC
   13                | STRUCT Tag

   14 OptTag: ID
   15       | ε

   16 Tag: ID

   17 VarDec: ID
   18       | VarDec LB INT RB
   19       | VarDec LB error RB

   20 FunDec: ID LP VarList RP
   21       | ID LP RP
   22       | ID LP error RP

   23 VarList: ParamDec COMMA VarList
   24        | ParamDec

   25 ParamDec: Specifier VarDec

   26 CompSt: LC DefList StmtList RC
   27       | LC error DefList StmtList RC
   28       | LC DefList StmtList error StmtList RC

   29 StmtList: Stmt StmtList
   30         | ε

   31 Stmt: Exp SEMI
   32     | CompSt
   33     | RETURN Exp SEMI
   34     | IF LP Exp RP Stmt
   35     | IF LP Exp RP Stmt ELSE Stmt
   36     | WHILE LP Exp RP Stmt
   37     | WHILE error RC
   38     | WHILE LP Exp RP error SEMI

   39 DefList: Def DefList
   40        | ε
   41        | error SEMI

   42 Def: Specifier DecList SEMI
   43    | Specifier error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | Exp ASSIGNOP error
   67    | Exp AND error
   68    | Exp OR error
   69    | Exp RELOP error
   70    | Exp PLUS error
   71    | Exp MINUS error
   72    | Exp STAR error
   73    | Exp DIV error
   74    | MINUS error
   75    | NOT error
   76    | LP error RP
   77    | ID LP error RP
   78    | ID LP error SEMI
   79    | Exp LB error RB

   80 Args: Exp COMMA Args
   81     | Exp


Terminals, with rules where they appear

    $end (0) 0
    error (256) 7 19 22 27 28 37 38 41 43 66 67 68 69 70 71 72 73 74 75 76 77 78 79
    INT <node> (258) 18 64
    FLOAT <node> (259) 65
    ID <node> (260) 14 16 17 20 21 22 59 60 62 63 77 78
    PLUS <node> (261) 52 70
    MINUS <node> (262) 53 57 71 74
    STAR <node> (263) 54 72
    DIV <node> (264) 55 73
    ASSIGNOP <node> (265) 47 48 66
    RELOP <node> (266) 51 69
    RETURN <node> (267) 33
    TYPE <node> (268) 10
    STRUCT <node> (269) 12 13
    LP <node> (270) 20 21 22 34 35 36 38 56 59 60 76 77 78
    LB <node> (271) 18 19 61 79
    LC <node> (272) 12 26 27 28
    RP <node> (273) 20 21 22 34 35 36 38 56 59 60 76 77
    RB <node> (274) 18 19 61 79
    RC <node> (275) 12 26 27 28 37
    IF <node> (276) 34 35
    ELSE <node> (277) 35
    WHILE <node> (278) 36 37 38
    COMMA <node> (279) 9 23 45 80
    SEMI <node> (280) 4 5 7 31 33 38 41 42 43 78
    DOT <node> (281) 62
    AND <node> (282) 49 67
    OR <node> (283) 50 68
    NOT <node> (284) 58 75
    LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

    $accept (31)
        on left: 0
    Program <node> (32)
        on left: 1
        on right: 0
    ExtDefList <node> (33)
        on left: 2 3
        on right: 1 2
    ExtDef <node> (34)
        on left: 4 5 6 7
        on right: 2
    ExtDecList <node> (35)
        on left: 8 9
        on right: 4 9
    Specifier <node> (36)
        on left: 10 11
        on right: 4 5 6 7 25 42 43
    StructSpecifier <node> (37)
        on left: 12 13
        on right: 11
    OptTag <node> (38)
        on left: 14 15
        on right: 12
    Tag <node> (39)
        on left: 16
        on right: 13
    VarDec <node> (40)
        on left: 17 18 19
        on right: 8 9 18 19 25 46 47
    FunDec <node> (41)
        on left: 20 21 22
        on right: 6
    VarList <node> (42)
        on left: 23 24
        on right: 20 23
    ParamDec <node> (43)
        on left: 25
        on right: 23 24
    CompSt <node> (44)
        on left: 26 27 28
        on right: 6 32
    StmtList <node> (45)
        on left: 29 30
        on right: 26 27 28 29
    Stmt <node> (46)
        on left: 31 32 33 34 35 36 37 38
        on right: 29 34 35 36
    DefList <node> (47)
        on left: 39 40 41
        on right: 12 26 27 28 39
    Def <node> (48)
        on left: 42 43
        on right: 39
    DecList <node> (49)
        on left: 44 45
        on right: 42 45
    Dec <node> (50)
        on left: 46 47
        on right: 44 45
    Exp <node> (51)
        on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72 73 74 75 76 77 78 79
        on right: 31 33 34 35 36 38 47 48 49 50 51 52 53 54 55 56 57 58 61 62 66 67 68 69 70 71 72 73 79 80 81
    Args <node> (52)
        on left: 80 81
        on right: 59 80


State 0

    0 $accept: • Program $end

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    Program          go to state 3
    ExtDefList       go to state 4
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 1

   10 Specifier: TYPE •

    $default  reduce using rule 10 (Specifier)


State 2

   12 StructSpecifier: STRUCT • OptTag LC DefList RC
   13                | STRUCT • Tag

    ID  shift, and go to state 8

    $default  reduce using rule 15 (OptTag)

    OptTag  go to state 9
    Tag     go to state 10


State 3

    0 $accept: Program • $end

    $end  shift, and go to state 11


State 4

    1 Program: ExtDefList •

    $default  reduce using rule 1 (Program)


State 5

    2 ExtDefList: ExtDef • ExtDefList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    $default  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 12
    ExtDef           go to state 5
    Specifier        go to state 6
    StructSpecifier  go to state 7


State 6

    4 ExtDef: Specifier • ExtDecList SEMI
    5       | Specifier • SEMI
    6       | Specifier • FunDec CompSt
    7       | Specifier • error SEMI

    error  shift, and go to state 13
    ID     shift, and go to state 14
    SEMI   shift, and go to state 15

    ExtDecList  go to state 16
    VarDec      go to state 17
    FunDec      go to state 18


State 7

   11 Specifier: StructSpecifier •

    $default  reduce using rule 11 (Specifier)


State 8

   14 OptTag: ID •
   16 Tag: ID •

    LC        reduce using rule 14 (OptTag)
    $default  reduce using rule 16 (Tag)


State 9

   12 StructSpecifier: STRUCT OptTag • LC DefList RC

    LC  shift, and go to state 19


State 10

   13 StructSpecifier: STRUCT Tag •

    $default  reduce using rule 13 (StructSpecifier)


State 11

    0 $accept: Program $end •

    $default  accept


State 12

    2 ExtDefList: ExtDef ExtDefList •

    $default  reduce using rule 2 (ExtDefList)


State 13

    7 ExtDef: Specifier error • SEMI

    SEMI  shift, and go to state 20


State 14

   17 VarDec: ID •
   20 FunDec: ID • LP VarList RP
   21       | ID • LP RP
   22       | ID • LP error RP

    LP  shift, and go to state 21

    $default  reduce using rule 17 (VarDec)


State 15

    5 ExtDef: Specifier SEMI •

    $default  reduce using rule 5 (ExtDef)


State 16

    4 ExtDef: Specifier ExtDecList • SEMI

    SEMI  shift, and go to state 22


State 17

    8 ExtDecList: VarDec •
    9           | VarDec • COMMA ExtDecList
   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB

    LB     shift, and go to state 23
    COMMA  shift, and go to state 24

    $default  reduce using rule 8 (ExtDecList)


State 18

    6 ExtDef: Specifier FunDec • CompSt

    LC  shift, and go to state 25

    CompSt  go to state 26


State 19

   12 StructSpecifier: STRUCT OptTag LC • DefList RC

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    RC  reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 29
    Def              go to state 30


State 20

    7 ExtDef: Specifier error SEMI •

    $default  reduce using rule 7 (ExtDef)


State 21

   20 FunDec: ID LP • VarList RP
   21       | ID LP • RP
   22       | ID LP • error RP

    error   shift, and go to state 31
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    RP      shift, and go to state 32

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 34
    ParamDec         go to state 35


State 22

    4 ExtDef: Specifier ExtDecList SEMI •

    $default  reduce using rule 4 (ExtDef)


State 23

   18 VarDec: VarDec LB • INT RB
   19       | VarDec LB • error RB

    error  shift, and go to state 36
    INT    shift, and go to state 37


State 24

    9 ExtDecList: VarDec COMMA • ExtDecList

    ID  shift, and go to state 38

    ExtDecList  go to state 39
    VarDec      go to state 17


State 25

   26 CompSt: LC • DefList StmtList RC
   27       | LC • error DefList StmtList RC
   28       | LC • DefList StmtList error StmtList RC

    error   shift, and go to state 40
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 41
    Def              go to state 30


State 26

    6 ExtDef: Specifier FunDec CompSt •

    $default  reduce using rule 6 (ExtDef)


State 27

   41 DefList: error • SEMI

    SEMI  shift, and go to state 42


State 28

   42 Def: Specifier • DecList SEMI
   43    | Specifier • error SEMI

    error  shift, and go to state 43
    ID     shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 45
    Dec      go to state 46


State 29

   12 StructSpecifier: STRUCT OptTag LC DefList • RC

    RC  shift, and go to state 47


State 30

   39 DefList: Def • DefList

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    error   [reduce using rule 40 (DefList)]
    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 48
    Def              go to state 30


State 31

   22 FunDec: ID LP error • RP

    RP  shift, and go to state 49


State 32

   21 FunDec: ID LP RP •

    $default  reduce using rule 21 (FunDec)


State 33

   25 ParamDec: Specifier • VarDec

    ID  shift, and go to state 38

    VarDec  go to state 50


State 34

   20 FunDec: ID LP VarList • RP

    RP  shift, and go to state 51


State 35

   23 VarList: ParamDec • COMMA VarList
   24        | ParamDec •

    COMMA  shift, and go to state 52

    $default  reduce using rule 24 (VarList)


State 36

   19 VarDec: VarDec LB error • RB

    RB  shift, and go to state 53


State 37

   18 VarDec: VarDec LB INT • RB

    RB  shift, and go to state 54


State 38

   17 VarDec: ID •

    $default  reduce using rule 17 (VarDec)


State 39

    9 ExtDecList: VarDec COMMA ExtDecList •

    $default  reduce using rule 9 (ExtDecList)


State 40

   27 CompSt: LC error • DefList StmtList RC
   41 DefList: error • SEMI

    error   shift, and go to state 27
    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2
    SEMI    shift, and go to state 42

    INT     reduce using rule 40 (DefList)
    FLOAT   reduce using rule 40 (DefList)
    ID      reduce using rule 40 (DefList)
    MINUS   reduce using rule 40 (DefList)
    RETURN  reduce using rule 40 (DefList)
    LP      reduce using rule 40 (DefList)
    LC      reduce using rule 40 (DefList)
    RC      reduce using rule 40 (DefList)
    IF      reduce using rule 40 (DefList)
    WHILE   reduce using rule 40 (DefList)
    NOT     reduce using rule 40 (DefList)

    Specifier        go to state 28
    StructSpecifier  go to state 7
    DefList          go to state 55
    Def              go to state 30


State 41

   26 CompSt: LC DefList • StmtList RC
   28       | LC DefList • StmtList error StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    RETURN  shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    NOT     shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 66
    Stmt      go to state 67
    Exp       go to state 68


State 42

   41 DefList: error SEMI •

    $default  reduce using rule 41 (DefList)


State 43

   43 Def: Specifier error • SEMI

    SEMI  shift, and go to state 69


State 44

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   46 Dec: VarDec •
   47    | VarDec • ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 70
    LB        shift, and go to state 23

    $default  reduce using rule 46 (Dec)


State 45

   42 Def: Specifier DecList • SEMI

    SEMI  shift, and go to state 71


State 46

   44 DecList: Dec •
   45        | Dec • COMMA DecList

    COMMA  shift, and go to state 72

    $default  reduce using rule 44 (DecList)


State 47

   12 StructSpecifier: STRUCT OptTag LC DefList RC •

    $default  reduce using rule 12 (StructSpecifier)


State 48

   39 DefList: Def DefList •

    $default  reduce using rule 39 (DefList)


State 49

   22 FunDec: ID LP error RP •

    $default  reduce using rule 22 (FunDec)


State 50

   18 VarDec: VarDec • LB INT RB
   19       | VarDec • LB error RB
   25 ParamDec: Specifier VarDec •

    LB  shift, and go to state 23

    $default  reduce using rule 25 (ParamDec)


State 51

   20 FunDec: ID LP VarList RP •

    $default  reduce using rule 20 (FunDec)


State 52

   23 VarList: ParamDec COMMA • VarList

    TYPE    shift, and go to state 1
    STRUCT  shift, and go to state 2

    Specifier        go to state 33
    StructSpecifier  go to state 7
    VarList          go to state 73
    ParamDec         go to state 35


State 53

   19 VarDec: VarDec LB error RB •

    $default  reduce using rule 19 (VarDec)


State 54

   18 VarDec: VarDec LB INT RB •

    $default  reduce using rule 18 (VarDec)


State 55

   27 CompSt: LC error DefList • StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    RETURN  shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    NOT     shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 74
    Stmt      go to state 67
    Exp       go to state 68


State 56

   64 Exp: INT •

    $default  reduce using rule 64 (Exp)


State 57

   65 Exp: FLOAT •

    $default  reduce using rule 65 (Exp)


State 58

   59 Exp: ID • LP Args RP
   60    | ID • LP RP
   63    | ID •
   77    | ID • LP error RP
   78    | ID • LP error SEMI

    LP  shift, and go to state 75

    $default  reduce using rule 63 (Exp)


State 59

   57 Exp: MINUS • Exp
   74    | MINUS • error

    error  shift, and go to state 76
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 77


State 60

   33 Stmt: RETURN • Exp SEMI

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 78


State 61

   56 Exp: LP • Exp RP
   76    | LP • error RP

    error  shift, and go to state 79
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 80


State 62

   34 Stmt: IF • LP Exp RP Stmt
   35     | IF • LP Exp RP Stmt ELSE Stmt

    LP  shift, and go to state 81


State 63

   36 Stmt: WHILE • LP Exp RP Stmt
   37     | WHILE • error RC
   38     | WHILE • LP Exp RP error SEMI

    error  shift, and go to state 82
    LP     shift, and go to state 83


State 64

   58 Exp: NOT • Exp
   75    | NOT • error

    error  shift, and go to state 84
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 85


State 65

   32 Stmt: CompSt •

    $default  reduce using rule 32 (Stmt)


State 66

   26 CompSt: LC DefList StmtList • RC
   28       | LC DefList StmtList • error StmtList RC

    error  shift, and go to state 86
    RC     shift, and go to state 87


State 67

   29 StmtList: Stmt • StmtList

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    RETURN  shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    NOT     shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 88
    Stmt      go to state 67
    Exp       go to state 68


State 68

   31 Stmt: Exp • SEMI
   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    LB        shift, and go to state 95
    SEMI      shift, and go to state 96
    DOT       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99


State 69

   43 Def: Specifier error SEMI •

    $default  reduce using rule 43 (Def)


State 70

   47 Dec: VarDec ASSIGNOP • Exp

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 100


State 71

   42 Def: Specifier DecList SEMI •

    $default  reduce using rule 42 (Def)


State 72

   45 DecList: Dec COMMA • DecList

    ID  shift, and go to state 38

    VarDec   go to state 44
    DecList  go to state 101
    Dec      go to state 46


State 73

   23 VarList: ParamDec COMMA VarList •

    $default  reduce using rule 23 (VarList)


State 74

   27 CompSt: LC error DefList StmtList • RC

    RC  shift, and go to state 102


State 75

   59 Exp: ID LP • Args RP
   60    | ID LP • RP
   77    | ID LP • error RP
   78    | ID LP • error SEMI

    error  shift, and go to state 103
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    RP     shift, and go to state 104
    NOT    shift, and go to state 64

    Exp   go to state 105
    Args  go to state 106


State 76

   74 Exp: MINUS error •

    $default  reduce using rule 74 (Exp)


State 77

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   57    | MINUS Exp •
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    STAR  shift, and go to state 91
    DIV   shift, and go to state 92
    LB    shift, and go to state 95
    DOT   shift, and go to state 97

    $default  reduce using rule 57 (Exp)


State 78

   33 Stmt: RETURN Exp • SEMI
   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    LB        shift, and go to state 95
    SEMI      shift, and go to state 107
    DOT       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99


State 79

   76 Exp: LP error • RP

    RP  shift, and go to state 108


State 80

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   56    | LP Exp • RP
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    LB        shift, and go to state 95
    RP        shift, and go to state 109
    DOT       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99


State 81

   34 Stmt: IF LP • Exp RP Stmt
   35     | IF LP • Exp RP Stmt ELSE Stmt

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 110


State 82

   37 Stmt: WHILE error • RC

    RC  shift, and go to state 111


State 83

   36 Stmt: WHILE LP • Exp RP Stmt
   38     | WHILE LP • Exp RP error SEMI

    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 112


State 84

   75 Exp: NOT error •

    $default  reduce using rule 75 (Exp)


State 85

   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   58    | NOT Exp •
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    LB   shift, and go to state 95
    DOT  shift, and go to state 97

    $default  reduce using rule 58 (Exp)


State 86

   28 CompSt: LC DefList StmtList error • StmtList RC

    INT     shift, and go to state 56
    FLOAT   shift, and go to state 57
    ID      shift, and go to state 58
    MINUS   shift, and go to state 59
    RETURN  shift, and go to state 60
    LP      shift, and go to state 61
    LC      shift, and go to state 25
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63
    NOT     shift, and go to state 64

    $default  reduce using rule 30 (StmtList)

    CompSt    go to state 65
    StmtList  go to state 113
    Stmt      go to state 67
    Exp       go to state 68


State 87

   26 CompSt: LC DefList StmtList RC •

    $default  reduce using rule 26 (CompSt)


State 88

   29 StmtList: Stmt StmtList •

    $default  reduce using rule 29 (StmtList)


State 89

   52 Exp: Exp PLUS • Exp
   70    | Exp PLUS • error

    error  shift, and go to state 114
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 115


State 90

   53 Exp: Exp MINUS • Exp
   71    | Exp MINUS • error

    error  shift, and go to state 116
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 117


State 91

   54 Exp: Exp STAR • Exp
   72    | Exp STAR • error

    error  shift, and go to state 118
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 119


State 92

   55 Exp: Exp DIV • Exp
   73    | Exp DIV • error

    error  shift, and go to state 120
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 121


State 93

   48 Exp: Exp ASSIGNOP • Exp
   66    | Exp ASSIGNOP • error

    error  shift, and go to state 122
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 123


State 94

   51 Exp: Exp RELOP • Exp
   69    | Exp RELOP • error

    error  shift, and go to state 124
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 125


State 95

   61 Exp: Exp LB • Exp RB
   79    | Exp LB • error RB

    error  shift, and go to state 126
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 127


State 96

   31 Stmt: Exp SEMI •

    $default  reduce using rule 31 (Stmt)


State 97

   62 Exp: Exp DOT • ID

    ID  shift, and go to state 128


State 98

   49 Exp: Exp AND • Exp
   67    | Exp AND • error

    error  shift, and go to state 129
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 130


State 99

   50 Exp: Exp OR • Exp
   68    | Exp OR • error

    error  shift, and go to state 131
    INT    shift, and go to state 56
    FLOAT  shift, and go to state 57
    ID     shift, and go to state 58
    MINUS  shift, and go to state 59
    LP     shift, and go to state 61
    NOT    shift, and go to state 64

    Exp  go to state 132


State 100

   47 Dec: VarDec ASSIGNOP Exp •
   48 Exp: Exp • ASSIGNOP Exp
   49    | Exp • AND Exp
   50    | Exp • OR Exp
   51    | Exp • RELOP Exp
   52    | Exp • PLUS Exp
   53    | Exp • MINUS Exp
   54    | Exp • STAR Exp
   55    | Exp • DIV Exp
   61    | Exp • LB Exp RB
   62    | Exp • DOT ID
   66    | Exp • ASSIGNOP error
   67    | Exp • AND error
   68    | Exp • OR error
   69    | Exp • RELOP error
   70    | Exp • PLUS error
   71    | Exp • MINUS error
   72    | Exp • STAR error
   73    | Exp • DIV error
   79    | Exp • LB error RB

    PLUS      shift, and go to state 89
    MINUS     shift, and go to state 90
    STAR      shift, and go to state 91
    DIV       shift, and go to state 92
    ASSIGNOP  shift, and go to state 93
    RELOP     shift, and go to state 94
    LB        shift, and go to state 95
    DOT       shift, and go to state 97
    AND       shift, and go to state 98
    OR        shift, and go to state 99

    $default  reduce using rule 47 (Dec)


State 101

   45 DecList: Dec COMMA DecList •

    $default  reduce using rule 45 (DecList)


State 102

   27 CompSt: LC error DefList StmtList RC •

    $default  reduce using rule 27 (CompSt)


State 103

   77 Exp: ID LP error • RP
   78    | ID LP error • SEMI

    RP    shift, and go to state 133
    SEMI  shift, and go to state 134


State 104

   60 Exp: ID LP RP •

    $default  reduce using rule 60 (Exp)


State 105
